--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^18.15.11",
     "eslint": "^8.38.0",
     "nuxt": "^3.4.1",
+    "sass": "^1.62.0",
     "typescript": "^5.0.4"
   },
   "dependencies": {
