--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@nuxt/ui": "^0.4.1",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
+    "@types/crypto-js": "^4.1.1",
     "@types/node": "^18.15.11",
     "eslint": "^8.38.0",
     "nuxt": "^3.4.1",
@@ -27,6 +28,7 @@
     "@alicloud/tea-util": "^1.4.5",
     "chalk": "^5.2.0",
     "consola": "^3.0.2",
+    "crypto-js": "^4.1.1",
     "tencentcloud-sdk-nodejs": "^4.0.580"
   }
 }
