--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxt/ui": "^0.4.1",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@types/crypto-js": "^4.1.1",
+    "@types/file-saver": "^2.0.5",
     "@types/node": "^18.15.11",
     "eslint": "^8.38.0",
     "nuxt": "^3.4.1",
@@ -29,6 +30,8 @@
     "chalk": "^5.2.0",
     "consola": "^3.0.2",
     "crypto-js": "^4.1.1",
+    "file-saver": "^2.0.5",
+    "numbro": "^2.3.6",
     "tencentcloud-sdk-nodejs": "^4.0.580"
   }
 }
