--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "translator-nuxt-tool",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "build": "nuxi build",
@@ -8,7 +9,8 @@
     "generate": "nuxi generate",
     "preview": "nuxi preview",
     "postinstall": "nuxi prepare",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0"
   },
   "devDependencies": {
     "@nuxt/ui": "^0.4.1",
@@ -16,6 +18,7 @@
     "@types/crypto-js": "^4.1.1",
     "@types/file-saver": "^2.0.5",
     "@types/node": "^18.15.11",
+    "conventional-changelog-cli": "^2.2.2",
     "eslint": "^8.38.0",
     "nuxt": "^3.4.1",
     "sass": "^1.62.0",
